# axum-server

./: Cargo.toml  README.md
docs/: thunder_client.md
src/: lib.rs  main.rs
src/database/: eligible_case.rs  eligible_cases.rs  insurer.rs  iro.rs  mod.rs  patient.rs  prelude.rs  provider.rs  user.rs
src/routes/: always_errors.rs  create_eligible_case.rs  create_insurer.rs  create_iro.rs  create_patient.rs  create_provider.rs  create_user.rs  custom_patient_extractor.rs  custom_provider_extractor.rs  delete_eligible_case.rs  delete_insurer.rs  delete_iro.rs  delete_patient.rs  delete_provider.rs  get_eligible_case.rs  get_insurer.rs  get_iro.rs  get_json.rs  get_patient.rs  get_provider.rs  guard.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  patch_eligible_case.rs  patch_insurer.rs  patch_iro.rs  patch_patient.rs  patch_provider.rs  path_var.rs  query_params.rs  returns_201.rs  template.rs  update_eligible_case.rs  update_insurer.rs  update_iro.rs  (+4 more)
src/utils/: app_error.rs  jwt.rs  mod.rs
tests/: eligible_case_create.rs  insurer_create.rs  insurer_update.rs  insurers_get.rs  insurers_post.rs  iro_create.rs  iros_get.rs  patient_create.rs  patients_get.rs  provider_create.rs  providers_get.rs  quick_dev.rs
