[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
