[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["headers"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
sea-orm = { version = "0.11.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
